--- a/Building.xaml
+++ b/Building.xaml
@@ -54,7 +54,7 @@
                                     <RowDefinition/>
                                     <RowDefinition Height="0*"/>
                                 </Grid.RowDefinitions>
-                                <TextBlock Text="Home" Margin="85,0,-86,0"/>
+                                <TextBlock Text="Home" Margin="85,0,-86,0" FontFamily="Leelawadee"/>
                             </Grid>
                         </MenuItem.Header>
 
@@ -68,7 +68,7 @@
                     <MenuItem Margin="-1,79,1,-141" FontSize="40" FontWeight="Bold" Click="announcement_btn">
                         <MenuItem.Header>
                             <Grid>
-                                <TextBlock Text="Announcement" Margin="85,0,-86,0"/>
+                                <TextBlock Text="Announcement" Margin="85,0,0,0" FontFamily="Leelawadee" HorizontalAlignment="Left" Width="288"/>
                             </Grid>
                         </MenuItem.Header>
 
@@ -82,13 +82,13 @@
                     <MenuItem Margin="-1,237,1,-299" FontSize="40" FontWeight="Bold" Background="#FF0B5793">
                         <MenuItem.Header>
                             <Grid>
-                                <TextBlock Text="Ground" Margin="85,0,-86,0" Foreground="White"/>
+                                <TextBlock Text="Ground" Margin="85,0,-86,0" Foreground="White" FontFamily="Leelawadee"/>
                             </Grid>
                         </MenuItem.Header>
 
                         <MenuItem.Icon>
 
-                            <Image Source="/assets/Icons/ground.png" Margin="45,-19,-81,-17" />
+                            <Image Source="/assets/Icons/ground-white.png" Margin="45,-19,-81,-17" />
 
                         </MenuItem.Icon>
                     </MenuItem>
@@ -96,7 +96,7 @@
                     <MenuItem Margin="0,317,0,-379" FontSize="40" FontWeight="Bold" Click="mezzanine_btn">
                         <MenuItem.Header>
                             <Grid>
-                                <TextBlock Text="Mezzanine" Margin="85,0,-86,0"/>
+                                <TextBlock Text="Mezzanine" Margin="85,0,-86,0" FontFamily="Leelawadee"/>
                             </Grid>
                         </MenuItem.Header>
 
@@ -110,7 +110,7 @@
                     <MenuItem Margin="1,398,-1,-460" FontSize="40" FontWeight="Bold" Click="floor2_btn">
                         <MenuItem.Header>
                             <Grid>
-                                <TextBlock Text="2nd Floor" Margin="85,0,-86,0"/>
+                                <TextBlock Text="2nd Floor" Margin="85,0,-86,0" FontFamily="Leelawadee"/>
                             </Grid>
                         </MenuItem.Header>
 
@@ -124,7 +124,7 @@
                     <MenuItem Margin="-1,478,1,-540" FontSize="40" FontWeight="Bold" Click="floor3_btn">
                         <MenuItem.Header>
                             <Grid>
-                                <TextBlock Text="3rd Floor" Margin="85,0,-86,0"/>
+                                <TextBlock Text="3rd Floor" Margin="85,0,-86,0" FontFamily="Leelawadee"/>
                             </Grid>
                         </MenuItem.Header>
 
@@ -138,7 +138,7 @@
                     <MenuItem Margin="1,558,-1,-620" FontSize="40" FontWeight="Bold" Click="floor4_btn">
                         <MenuItem.Header>
                             <Grid>
-                                <TextBlock Text="4th Floor" Margin="85,0,-86,0"/>
+                                <TextBlock Text="4th Floor" Margin="85,0,-86,0" FontFamily="Leelawadee"/>
                             </Grid>
                         </MenuItem.Header>
 
@@ -152,7 +152,7 @@
                     <MenuItem Margin="-1,637,1,-699" FontSize="40" FontWeight="Bold" Click="roofdeck_btn">
                         <MenuItem.Header>
                             <Grid>
-                                <TextBlock Text="Roof Deck" Margin="85,0,-86,0"/>
+                                <TextBlock Text="Roof Deck" Margin="85,0,-86,0" FontFamily="Leelawadee"/>
                             </Grid>
                         </MenuItem.Header>
 
@@ -188,7 +188,7 @@
                             </Image.RenderTransform>
                         </Image>
                         <Rectangle Name="clickableSection"
-                        MouseDown="ClickableSection_Click" Canvas.Left="543" Canvas.Top="321" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="125" Width="142" Fill="#FFE24242">
+                        MouseDown="ClickableSection_Click" Canvas.Left="543" Canvas.Top="321" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="125" Width="142" Fill="Transparent">
                             <Rectangle.RenderTransform>
                                 <TransformGroup>
                                     <ScaleTransform ScaleX="1.019"/>
