--- a/Floor2.xaml
+++ b/Floor2.xaml
@@ -187,7 +187,7 @@
                                 </TransformGroup>
                             </Image.RenderTransform>
                         </Image>
-                        <Rectangle Name="clickableSection" Fill="#FFD63F3F"
+                        <Rectangle Name="clickableSection" Fill="Transparent"
                     MouseDown="ClickableSection_Click" Canvas.Left="462" Canvas.Top="320" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="85" Width="119">
                             <Rectangle.RenderTransform>
                                 <TransformGroup>
