--- a/Floor4.xaml
+++ b/Floor4.xaml
@@ -187,7 +187,7 @@
                                 </TransformGroup>
                             </Image.RenderTransform>
                         </Image>
-                        <Rectangle Name="clickableSection" Fill="#FFD63F3F"
+                        <Rectangle Name="clickableSection" Fill="Transparent"
                     MouseDown="ClickableSection_Click" Canvas.Left="666" Canvas.Top="266" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Height="324" Width="366">
                             <Rectangle.RenderTransform>
                                 <TransformGroup>
